--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-calendly": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
